add Favicon into 'index.html' and edit paths into App.jsx and add more layouts and build 'Footer.jsx' and its style

--- a/index.html
+++ b/index.html
@@ -1,19 +1,72 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>W3Schools</title>
-</head>
+    <meta
+      property="og:image"
+      content="https://www.w3schools.com/images/w3schools_logo_436_2.png"
+      data--h-bstatus="0OBSERVED" />
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+    <link
+      rel="icon"
+      href="https://www.w3schools.com/favicon.ico"
+      data--h-bstatus="0OBSERVED" />
 
-  <!-- FontAwsome Script -->
-  <script src="https://kit.fontawesome.com/6fb92b164c.js" crossorigin="anonymous"></script>
-</body>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-touch-icon.png"
+      data--h-bstatus="0OBSERVED" />
 
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon-32x32.png"
+      data--h-bstatus="0OBSERVED" />
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon-16x16.png"
+      data--h-bstatus="0OBSERVED" />
+
+    <meta
+      property="og:image:type"
+      content="image/png"
+      data--h-bstatus="0OBSERVED" />
+
+    <meta property="og:image:width" content="436" data--h-bstatus="0OBSERVED" />
+
+    <meta
+      property="og:image:height"
+      content="228"
+      data--h-bstatus="0OBSERVED" />
+
+    <meta
+      property="og:description"
+      content="W3Schools offers free online tutorials, references and exercises in all the major languages of the web. Covering popular subjects like HTML, CSS, JavaScript, Python, SQL, Java, and many, many more."
+      data--h-bstatus="0OBSERVED" />
+
+    <meta
+      name="Keywords"
+      content="HTML, Python, CSS, SQL, JavaScript, How to, PHP, Java, C, C++, C#, jQuery, Bootstrap, Colors, W3.CSS, XML, MySQL, Icons, NodeJS, React, Graphics, Angular, R, AI, Git, Data Science, Code Game, Tutorials, Programming, Web Development, Training, Learning, Quiz, Exercises, Courses, Lessons, References, Examples, Learn to code, Source code, Demos, Tips, Website"
+      data--h-bstatus="0OBSERVED" />
+
+    <title>W3Schools</title>
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+
+    <!-- FontAwsome Script -->
+    <script
+      src="https://kit.fontawesome.com/6fb92b164c.js"
+      crossorigin="anonymous"></script>
+  </body>
 </html>
