--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
   <body>
     <div id="root"></div>
+    <!-- MainReactScript -->
     <script type="module" src="/src/main.jsx"></script>
 
     <!-- FontAwsome Script -->
